--- a/src/components/add-participants/add-participants.component.html
+++ b/src/components/add-participants/add-participants.component.html
@@ -7,7 +7,7 @@
     <h5 class="text-xl text-center font-bold leading-none text-gray-900 dark:text-black">Participants and Monthly Budget</h5>
   </div>
   @if (users | async; as users ) {
-  @for (item of users | async; track item.id){
+  @for (item of users | async; track item.username){
   <app-add-participants-line [user] ="item"></app-add-participants-line>
   }
   }
